Extract gradle configs and add some dependencies like Firebase, LeakCanary, etc. .

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,28 +2,69 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlinx-serialization'
+
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion androidBuild.compileSdkVersion
+    buildToolsVersion androidBuild.buildToolsVersion
 
     defaultConfig {
         applicationId "net.imknown.android.bundletooldevicespecjsongenerator"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        versionCode androidBuild.versionCode
+        versionName androidBuild.versionName
+
+        archivesBaseName = "btdsjg-$versionName-$versionCode-$currentDate-$currentGitBranchName"
+
+        minSdkVersion androidBuild.minSdkVersion
+        targetSdkVersion androidBuild.targetSdkVersion
+
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+
+        resConfigs 'zh-rCN', 'ja-rJP'
+
+        buildConfigField 'String', 'GIT_BRANCH', "\"$currentGitBranchName\""
+    }
+
+    signingConfigs {
+        release {
+            storeFile file(keysConfig.release.storeFile)
+            storePassword keysConfig.release.storePassword
+            keyAlias keysConfig.release.keyAlias
+            keyPassword keysConfig.release.keyPassword
+        }
+
+        debug {
+            storeFile file(keysConfig.debug.storeFile)
+            storePassword keysConfig.debug.storePassword
+            keyAlias keysConfig.debug.keyAlias
+            keyPassword keysConfig.debug.keyPassword
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
+
+            signingConfig signingConfigs.release
+
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
                     'proguard-rules.pro',
-                    'proguard-rules-kotlinx-serialization-json.pro'
+                    'proguard-rules-kotlinx-serialization-json.pro',
+                    'proguard-firebase-rules.pro'
+        }
+
+        debug {
+            debuggable true
+            jniDebuggable true
+
+            signingConfig signingConfigs.debug
+
+            applicationIdSuffix ".$name"
         }
     }
 
@@ -37,23 +78,22 @@ android {
     }
 }
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
+import java.time.Instant
+import java.time.ZoneId
+import java.time.format.DateTimeFormatter
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
-
-    implementation 'com.google.android.material:material:1.2.1'
-
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+private static getCurrentDate() {
+    DateTimeFormatter.ofPattern("yyyyMMdd-HHmm").format(Instant.now().atZone(ZoneId.systemDefault()))
 }
+
+private static getCurrentGitBranchName() {
+    def branch = ""
+    def process = "git rev-parse --abbrev-ref HEAD".execute()
+    process.in.eachLine { line -> branch = line }
+    process.err.eachLine { line -> println line }
+    process.waitFor()
+
+    branch
+}
+
+apply from: 'dependencies.gradle'
