--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.20"
+    apply from: 'gradle/buildScriptConfig.gradle'
+    apply from: 'gradle/keysConfig.gradle'
 
     repositories {
         google()
@@ -8,9 +9,13 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$androidBuild.androidStudioGradlePlugin"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinSdk.core"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlinSdk.core"
+
+        classpath "com.google.gms:google-services:$firebase.googleServices"
+
+        classpath "com.google.firebase:firebase-crashlytics-gradle:$firebase.firebaseCrashlyticsGradlePlugin"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
